# ncbi_submission

./: Dockerfile  fix_file.sh  fix_gff_file.py  get_data.sh  license  pyproject.toml  questions.md  readme.md  template.sbt
mappings/: mappings.tsv
